--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>EvaluateIt!</title>
     <script id="microloader" type="text/javascript" src="../../microloader/development.js"></script>
+	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
 </head>
 <body onload="setTimeout(function() { window.scrollTo(0, 1) }, 1000);">
 </body>
