--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>EvaluateIt!</title>
-    <script id="microloader" type="text/javascript" src="touch/microloader/development.js"></script>
+    <script>window.onerror = function(error) { alert(error); };</script>
+	<script id="microloader" type="text/javascript" src="touch/microloader/development.js"></script>
 	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+	<script type="text/javascript">
+        document.addEventListener("deviceready", function() {
+			console.warn('deviceready!');
+		});
+    </script>
 </head>
 <body onload="setTimeout(function() { window.scrollTo(0, 1) }, 1000);">
 </body>
